@@ -1370,6 +1370,300 @@ view_nii_menu.m
 xform_nii.m
 
 
+ThirdPartyToolbox/SpharmToolbox
+-------------------------------------------------------------
+
+align_cps.m
+
+	 Goal: Align P to X using ICP
+
+align_CPS_SHREC.m
+
+
+align_FOE.m
+
+
+align_icp.m
+
+	 Goal: Align P to X using ICP
+
+calc_asr.m
+
+
+calc_STPS.m
+
+
+calc_triangle_areas.m
+
+
+calculate_SPHARM_basis.m
+
+	 Goal: Create canonical spherical harmonic bases
+
+conv2bim.m
+
+	 Goal: 
+
+create_SPHARM_des_LSF.m
+
+
+dispOptions.m
+
+
+do_pca.m
+
+
+extractSignals.m
+
+
+extract_surface.m
+
+	 Goal: Extract surface data (vertices and faces) from a binary object
+
+fill3dholes.m
+
+
+fix_bad_topology.m
+
+	 Goal: Fix a binary image by removing bad connectivities
+
+fixed_fvec.m
+
+
+FLD.m
+
+	 Goal: 
+
+gen_surf_data.m
+
+
+get_vertexnormals.m
+
+
+gipl_read_header.m
+
+
+gipl_read_volume.m
+
+
+gipl_write_volume.m
+
+
+initOptions.m
+
+
+initParamCALD.m
+
+
+load_nii_hdr.m
+
+
+load_nii_img.m
+
+
+load_nii.m
+
+
+LoadObjList.m
+
+
+loadOptions.m
+
+
+match_cps.m
+
+
+match_icp.m
+
+
+match_param_hie.m
+
+
+match_param.m
+
+
+NIfTI2bim.m
+
+	 Goal: Convert NIfTI image to bim format
+
+patch_color.m
+
+	 Goal: surface rendering with color
+
+patch_colormesh.m
+
+	 Goal: surface rendering with color
+
+patch_lighta.m
+
+	 Goal: surface rendering with lighting
+
+patch_light.m
+
+	 Goal: surface rendering with lighting
+
+patch_lightmesh.m
+
+	 Goal: surface rendering with lighting
+
+patch_mesh.m
+
+	 Goal: surface mesh rendering
+
+patch_overlay.m
+
+
+patch_shademesh.m
+
+	 Goal: surface shaded mesh rendering
+
+performHKsmooth.m
+
+	 Goal: Heat kernal smoothing, preprocessing for t-test
+
+performPCA.m
+
+
+performTstat.m
+
+
+project_PCA.m
+
+
+read_coef.m
+
+
+read_gipl.m
+
+
+read_meta.m
+
+
+readM.m
+
+
+readSTL.m
+
+
+rotate_mat.m
+
+
+rotate_param_m03.m
+
+	 Goal: rotating parameter space
+
+sample_euler_angle.m
+
+
+sample_Param_Space.m
+
+	 Goal: 
+
+saveOptions.m
+
+
+shrec_kth_itr.m
+
+
+smootheCALD.m
+
+
+SpharmMatAlignment.m
+
+
+SpharmMatDisplayStat.m
+
+
+SpharmMatExpandAlignByPDM.m
+
+
+SpharmMatExpansion.m
+
+
+SPHARM_MAT.m
+
+
+SpharmMatParameterization.m
+
+
+SpharmMatParamTriaMesh.m
+
+
+SpharmMatStatAnalysis.m
+
+
+SpharmMatUtilAverageObjs.m
+
+
+SpharmMatUtilBatchJobs.m
+
+
+SpharmMatUtilDisplayObjs.m
+
+
+SpharmMatUtilFormatConvert.m
+
+
+SpharmMatUtilImportObjs.m
+
+
+SpharmMatUtilScaleObjs.m
+
+
+SpharmMatUtilTopologyFix.m
+
+
+SPHARM_rmsd_batch.m
+
+
+SPHARM_rmsd.m
+
+
+stlreadASCII.m
+
+
+stlreadBIN.m
+
+
+surf_spharm.m
+
+
+updateOptions.m
+
+
+utl_eas.m
+
+	 Goal: create euler angle samples
+
+utl_sgm.m
+
+	 Goal: create signmatrix
+
+write_coef.m
+
+
+write_gipl.m
+
+
+write_metaNcoef.m
+
+
+write_meta_quad.m
+
+
+write_meta_tri.m
+
+
+write_procalign.m
+
+
+write_surfNpara.m
+
+
+xform_nii.m
+
+
+
 ThirdPartyToolbox/sphsplineToolbox
 -------------------------------------------------------------
 
