@@ -11,7 +11,7 @@
 
 % Author: Ramon Casero <rcasero@gmail.com>
 % Copyright © 2013 University of Oxford
-% Version: 0.1.1
+% Version: 0.1.2
 % $Rev$
 % $Date$
 %
@@ -53,7 +53,11 @@ toolboxes = { ...
     'ManifoldToolbox', ...
     'PointsToolbox', ...
     'ThirdPartyToolbox', ...
+    ['ThirdPartyToolbox' filesep 'iso2meshToolbox'], ...
+    ['ThirdPartyToolbox' filesep 'iso2meshToolbox/bin'], ...
     ['ThirdPartyToolbox' filesep 'niftiToolbox'], ...
+    ['ThirdPartyToolbox' filesep 'SpharmToolbox'], ...
+    ['ThirdPartyToolbox' filesep 'SpharmToolbox/C_sources'], ...
     ['ThirdPartyToolbox' filesep 'sphsplineToolbox'], ...
     ['ThirdPartyToolbox' filesep 'TiffreadToolbox'] ...
     };
